--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
   <modules>
     <module>core</module>
+    <module>cliente</module>
     <module>servidor</module>
   </modules>
   <dependencies>
@@ -26,7 +27,6 @@
       <version>1.18.28</version>
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
 
 </project>
