--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,7 +10,6 @@
   <artifactId>core</artifactId>
   <version>0.1</version>
   <packaging>maven-archetype</packaging>
-
   <name>Archetype - core</name>
 
   <!-- FIXME change it to the project's website -->
@@ -21,8 +20,16 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
-  <build>
+    <build>
     <extensions>
       <extension>
         <groupId>org.apache.maven.archetype</groupId>
