--- a/servidor/pom.xml
+++ b/servidor/pom.xml
@@ -26,6 +26,12 @@
             <groupId>dev.rayh</groupId>
             <artifactId>core</artifactId>
             <version>0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>dev.rayh</groupId>
+            <artifactId>core</artifactId>
+            <version>0.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -60,6 +66,20 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <version>3.2.2</version> <!-- Use a versão mais recente disponível -->
+              <configuration>
+                  <archive>
+                      <manifest>
+                          <addClasspath>true</addClasspath>
+                          <classpathPrefix>lib/</classpathPrefix>
+                          <mainClass>Main</mainClass> <!-- Substitua com o nome da sua classe principal -->
+                      </manifest>
+                  </archive>
+              </configuration>
+          </plugin>
       </plugins>
     </pluginManagement>
         <plugins>
