--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
   <modelVersion>4.0.0</modelVersion>
   <groupId>dev.rayh</groupId>
   <artifactId>JavaRmiFxChat</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <packaging>pom</packaging>
 
   <properties>
@@ -16,9 +14,10 @@
 
   <modules>
     <module>core</module>
-    <module>cliente</module>
-    <module>servidor</module>
+    <module>server</module>
+    <module>client</module>
   </modules>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
