--- a/registry/pom.xml
+++ b/registry/pom.xml
@@ -7,18 +7,18 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>dev.rayh.client</groupId>
-  <artifactId>client</artifactId>
+  <groupId>dev.rayh.registry</groupId>
+  <artifactId>registry</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>client</name>
+  <name>registry</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>19</maven.compiler.source>
+    <maven.compiler.target>19</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -28,11 +28,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>dev.rayh</groupId>
-          <artifactId>core</artifactId>
-          <version>0.1</version>
-      </dependency>
+    <dependency>
+      <groupId>dev.rayh</groupId>
+      <artifactId>core</artifactId>
+      <version>0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -79,16 +79,5 @@
         </plugin>
       </plugins>
     </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <source>19</source>
-          <target>19</target>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 </project>
