--- a/server/pom.xml
+++ b/server/pom.xml
@@ -34,6 +34,12 @@
           <version>0.1</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>dev.rayh.registry</groupId>
+      <artifactId>registry</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
 
   <build>
