--- a/client/pom.xml
+++ b/client/pom.xml
@@ -33,6 +33,12 @@
           <artifactId>core</artifactId>
           <version>0.1</version>
       </dependency>
+      <dependency>
+          <groupId>dev.rayh</groupId>
+          <artifactId>core</artifactId>
+          <version>0.1</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
